--- a/pom.xml
+++ b/pom.xml
@@ -7,5 +7,9 @@
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
+
+        <sonar.projectKey>OrielE2001_ProyectoJavaMaven</sonar.projectKey>
+        <sonar.organization>oriele2001</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
       </properties>
 </project>
